--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Estudo em HTML5</h1>
     <img src="foto-perfil-guanabara.png" alt="Gustavo Guanabara">
+    <p>Para salvar meu projeto no GitHub vou usar os comandos <mark><code>git add .</code></mark>, em seguida vamos usar o <mark><code>git commit -m "algo"</code></mark>, e por último vamos usar o <mark><code>git push</code></mark></p>
     <p>Meus contatos.</p>
     <ul type="circle">
         <li><img src="icone-github.png" alt="Ícone Github"><a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank" rel="unfollow"> Github</a></li>
