--- a/pag003.html
+++ b/pag003.html
@@ -6,8 +6,17 @@
     <title>Marcações de texto</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
     <style>
-        mark{
-            background-color: chocolate;
+        mark {
+        background-color: blueviolet;
+        color: aliceblue;
+        }
+        body {
+            background-color: rgb(171, 222, 235);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 16px;
+        }
+        p {
+            text-align: justify;
         }
     </style>
 </head>
