--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Aprendendo HTML5</title>
     <style>
         mark {
-            background-color: blueviolet;
-            color: aliceblue;
+        background-color: blueviolet;
+        color: aliceblue;
+        }
+        body {
+            background-color: rgb(171, 222, 235);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 16px;
+        }
+        p {
+            text-align: justify;
         }
     </style>
 </head>
