--- a/pag004.html
+++ b/pag004.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como adicionar imagem</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
+    <style>
+        mark {
+        background-color: blueviolet;
+        color: aliceblue;
+        }
+        body {
+            background-color: rgb(171, 222, 235);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 16px;
+        }
+        p {
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <h1>Como adicionar imagem no seu site.</h1>
