--- a/pag005.html
+++ b/pag005.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagem Dinâmica</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
+    <style>
+        mark {
+        background-color: blueviolet;
+        color: aliceblue;
+        }
+        body {
+            background-color: rgb(171, 222, 235);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 16px;
+        }
+        p {
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <h1>Vamos entender um pouco sobre imagens dinâmicas.</h1>
@@ -17,6 +31,6 @@
         <img src="foto-g.png" alt="Imagem grande.">
     </picture>
      <br>
-    <a href="index.html" rel="prev"><mark style="background-color: chartreuse;">Voltar</mark></a>
+    <a href="index.html" rel="prev">Voltar</a>
 </body>
 </html>
