--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
     <title>Aprendendo HTML5</title>
-    <style>
-        mark {
-        background-color: blueviolet;
-        color: aliceblue;
-        }
-        body {
-            background-color: rgb(171, 222, 235);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 16px;
-        }
-        p {
-            text-align: justify;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Estudo em HTML5</h1>
@@ -104,7 +91,7 @@
 
     <h2>Para adicionar audio</h2>
     <p>Para tocar audio é basicamente simples, voce irá usar a tag &lt;AUDIO&gt;, com os parâmetros de CONTROLS para aparecer o controlador da mídia, e também o parâmetro autoplay.</p>
-    <audio src="midia/SONG NO COPYRIGHT - MUSICA SEM DIREITOS AUTORAIS _ Lofi hip hop beat (online-audio-converter.com).mp3" controls autoplay></audio>
+    <audio src="midia/SONG NO COPYRIGHT - MUSICA SEM DIREITOS AUTORAIS _ Lofi hip hop beat (online-audio-converter.com).mp3" controls></audio>
 
     <p>Outra maneira para adicionar audio no seu site é usando o SOURCE, analise o codigo a seguir.</p>
 
