--- a/pag005.html
+++ b/pag005.html
@@ -5,20 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagem Dinâmica</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
-    <style>
-        mark {
-        background-color: blueviolet;
-        color: aliceblue;
-        }
-        body {
-            background-color: rgb(171, 222, 235);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 16px;
-        }
-        p {
-            text-align: justify;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Vamos entender um pouco sobre imagens dinâmicas.</h1>
