--- a/pag006.html
+++ b/pag006.html
@@ -4,20 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo a colocar vídeo</title>
-    <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon"><style>
-        mark {
-        background-color: blueviolet;
-        color: aliceblue;
-        }
-        body {
-            background-color: rgb(171, 222, 235);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 16px;
-        }
-        p {
-            text-align: justify;
-        }
-    </style>
+    <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
