--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
     <p>Assim você consegue uma gama de formatos e também de hierarquia de audios.</p>
 
     <h3>Para adicionar vídeo clique <a href="pag006.html" rel="next">aqui</a>.</h3>
+
+    <h2>Seletores em CSS</h2>
+    <P>Temos alguns seletores como CLASS, ID, VALUE e seletores universais. São eles respectivamentes, CLASS (.class) para chamar a função, ID (#id), p[value=""], e o Universal é apenas *{}, O Class pode ser usado em vários elementos, já o ID apenas em todo o código HTML, exemplo ID= "MAIN", so pode tem um MAIN em todo o código. o p[value=""] é para marcar Paragrafos, Listas ou titulos com algum valor especifico. O universal é para todos.</P>
         
 </body>
 </html>
