--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Estudo em HTML5</h1>
-    <img src="foto-perfil-guanabara.png" alt="Gustavo Guanabara">
+    <h1 class="titulos">Estudo em HTML5</h1>
+    <div id="gustavoguanabara">
+        <img src="foto-perfil-guanabara.png" alt="Gustavo Guanabara">
+    </div>
     <p>Para salvar meu projeto no GitHub vou usar os comandos <mark><code>git add .</code></mark>, em seguida vamos usar o <mark><code>git commit -m "algo"</code></mark>, e por último vamos usar o <mark><code>git push</code></mark></p>
     <p>Meus contatos.</p>
     <ul type="circle">
         <li><img src="icone-github.png" alt="Ícone Github"><a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank" rel="unfollow"> Github</a></li>
         <li><img src="icone-youtube.png" alt="ícone youtube"> <a href="https://www.youtube.com/c/CursoemVídeo" target="_blank" rel="unfollow">Youtube</a></li>
     </ul>
-    <h2>Entenda um pouco sobre <a href="pag002.html" rel="next">Títulos e Parágrafos</a>, e sobre a hierarquia desses títulos.</h2>
+    <h2 class="titulos">Entenda um pouco sobre <a href="pag002.html" rel="next">Títulos e Parágrafos</a>, e sobre a hierarquia desses títulos.</h2>
     <hr>
     
-    <h2>Entenda um pouco sobre como <a href="pag004.html" rel="next">adicionar imagem</a> no seu site.</h2>
+    <h2 class="titulos">Entenda um pouco sobre como <a href="pag004.html" rel="next">adicionar imagem</a> no seu site.</h2>
 
     <h3>Vamos colocar alguns emojis e símbolos.</h3>
     &reg; &copy; &trade; &euro; &pound; &yen; &cent; &Delta; &uarr;
@@ -31,10 +33,10 @@
     <p>Para termos <i>em itálico</i>, podemos usar a tag &lt;i&gt; que funciona normal. Porém outro metódo é selecionar o termo desejado e apertar as teclas CTRL + SHIFT + P, em seguida clicar em <i>Wrap with Abbreviation.</i> e selecionar a regras <em>EM</em> essa tag EM, funciona em nova versão.</p>
     <hr>
 
-    <h2>Vamos aprender um pouco sobre <a href="pag003.html" rel="next">Marcação de texto</a>, como podemos formatar alguns estilos e formatações.</h2>
+    <h2 class="titulos">Vamos aprender um pouco sobre <a href="pag003.html" rel="next">Marcação de texto</a>, como podemos formatar alguns estilos e formatações.</h2>
     <hr>
 
-    <h2>Trabalhando com listas.</h2>
+    <h2 class="titulos">Trabalhando com listas.</h2>
     <h3>Listas Ordenadas.</h3> 
     <p>É seguida da tag <strong>OL</strong>, com <strong>LI</strong> dentro dele, podendo tem o STYLE em <strong>números romanos, letras e números.</strong></p>
     <ol type="I"> 
@@ -43,7 +45,7 @@
         <li>Tomar café.</li>
         <li>Escovar os dentes.</li>
     </ol>
-    <h2>Listas não Ordenadas.</h2> <p>É seguida da tag <strong>UL</strong>, com <strong>LI</strong> dentre dele, podendo tem o STYLE em <strong>circle, disc e square.</strong></p>
+    <h2 class="titulos">Listas não Ordenadas.</h2> <p>É seguida da tag <strong>UL</strong>, com <strong>LI</strong> dentre dele, podendo tem o STYLE em <strong>circle, disc e square.</strong></p>
     <ul type="square">
         <li>Pão</li>
         <li>Arroz</li>
@@ -51,7 +53,7 @@
         <li>Feijão</li>
     </ul>
 
-    <h2>Minhas plataformas e jogos <i>favoritos.</i></h2>
+    <h2 class="titulos">Minhas plataformas e jogos <i>favoritos.</i></h2>
     <ol>
         <li>Steam</li>
         <ul type="circle">
@@ -74,11 +76,11 @@
         <dd>Linguagem de marcação para a criação de design de um site.</dd>
     </dl>
 
-    <h2>Links externos.</h2>
+    <h2 class="titulos">Links externos.</h2>
     <!--Usando a tag A, conseguindo gerar um link externo. Importante usar o TARGET _blank e o REL external, para abrir em uma nova guia.-->
     <p>Eu gosto muito do canal <a href="https://www.youtube.com/@einerdtv" target="_blank" rel="external">EiNerd</a>, ele tem muito conteúdo geek.</p>
 
-    <h2>Para efetuar downloads</h2>
+    <h2 class="titulos">Para efetuar downloads</h2>
     <hr>
     <p>Para efetuar download basta colocar o termo dentro do &lt;a&gt;, e na referencia voce coloca a pasta onde está o arquivo, e coloca os seguintes parametros <code>"download=seuarquivo.formato" type="application/formato"</code>, esse formato do type voce encontra <a href="https://www.iana.org/assignments/media-types/media-types.xhtml" target="_blank" rel="nofollow">aqui</a>.</p>
     <ul type="square">
@@ -86,10 +88,10 @@
         <li><a href="matricula/declaracao de matricula.rar" download="declaracao de matricula.rar" type="application/rar">Baixar em ZIP</a></li>
     </ul>
 
-    <h2>Imagem Dinâmica</h2>
+    <h2 class="titulos">Imagem Dinâmica</h2>
     <p>Vamos entender um pouco de imagem dinâmica <a href="pag005.html" rel="next">aqui</a>.</p>
 
-    <h2>Para adicionar audio</h2>
+    <h2 class="titulos">Para adicionar audio</h2>
     <p>Para tocar audio é basicamente simples, voce irá usar a tag &lt;AUDIO&gt;, com os parâmetros de CONTROLS para aparecer o controlador da mídia, e também o parâmetro autoplay.</p>
     <audio src="midia/SONG NO COPYRIGHT - MUSICA SEM DIREITOS AUTORAIS _ Lofi hip hop beat (online-audio-converter.com).mp3" controls></audio>
 
@@ -108,8 +110,13 @@
 
     <h3>Para adicionar vídeo clique <a href="pag006.html" rel="next">aqui</a>.</h3>
 
-    <h2>Seletores em CSS</h2>
+    <h2 class="titulos">Seletores em CSS</h2>
     <P>Temos alguns seletores como CLASS, ID, VALUE e seletores universais. São eles respectivamentes, CLASS (.class) para chamar a função, ID (#id), p[value=""], e o Universal é apenas *{}, O Class pode ser usado em vários elementos, já o ID apenas em todo o código HTML, exemplo ID= "MAIN", so pode tem um MAIN em todo o código. o p[value=""] é para marcar Paragrafos, Listas ou titulos com algum valor especifico. O universal é para todos.</P>
+
+    <h2 class="titulos">Fontes e Cores.</h2>
+    <p>A muitas maneiras de representar cores no CSS, a mais usada são as cores em HEXADECIMAL, sites que voce pode encontrar alguns exemplos sao o <a href="https://color.adobe.com/pt/create/color-wheel" rel="external">adobe</a> e o <a href="https://colorhunt.co" rel="external">colorhunt</a>. Já as fontes você consegue encontrar no próprio visual code (VSCode) como também no  <a href="https://fonts.google.com" rel="external">GoogleFonts</a>. As fontes existem por caterias que você pode entrar como serifadas, sem serifas, monoespaçadas, fantasia, feitas a mão entre outras... </p>
+
+
         
 </body>
 </html>
