--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulos">Estudo em HTML5</h1>
+    <div id="titulo-principal">
+        <h1>Estudo em HTML5</h1>
+    </div>
     <div id="gustavoguanabara">
         <img src="foto-perfil-guanabara.png" alt="Gustavo Guanabara">
     </div>
@@ -18,10 +20,18 @@
         <li><img src="icone-github.png" alt="Ícone Github"><a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank" rel="unfollow"> Github</a></li>
         <li><img src="icone-youtube.png" alt="ícone youtube"> <a href="https://www.youtube.com/c/CursoemVídeo" target="_blank" rel="unfollow">Youtube</a></li>
     </ul>
-    <h2 class="titulos">Entenda um pouco sobre <a href="pag002.html" rel="next">Títulos e Parágrafos</a>, e sobre a hierarquia desses títulos.</h2>
+    <div class="titulo">
+        <h2 class="titulos"><a href="pag002.html" rel="next">Títulos</a></h2>   
+    </div>
+
+    <div class="titulo">
+        <h2><a href="pag004.html" rel="next">Imagem</a></h2>
+    </div>
+
+    <p>Aprenda um pouco sobre hierarquia de títulos e paragráfos e sobre como inserir imagens nos links acima. &uparrow;</p>
     <hr>
     
-    <h2 class="titulos">Entenda um pouco sobre como <a href="pag004.html" rel="next">adicionar imagem</a> no seu site.</h2>
+    
 
     <h3>Vamos colocar alguns emojis e símbolos.</h3>
     &reg; &copy; &trade; &euro; &pound; &yen; &cent; &Delta; &uarr;
