--- a/pag002.html
+++ b/pag002.html
@@ -6,13 +6,17 @@
     <title>Títulos e hierarquia</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background-image: linear-gradient(to bottom, #4EC0BA, #38EBE2, #5B9996);
+        }
+    </style>
 <body>
 
-    <h1>Entendendo Portugal</h1>
+    <h1 class="titulo-principal">Entendendo Portugal</h1>
 
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum vero nesciunt quasi eum! Possimus dolore totam assumenda magni officia, corporis vitae, neque temporibus, voluptatum fuga atque dolorum architecto animi labore.</p>
-    <h2>1. Introdução</h2>
+    <h2 class="sub-titulos">1. Introdução</h2>
     <h3>1.1 Justificação da temática</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus nostrum expedita ea vitae quos nemo, ipsa sit odit ipsum commodi dolore suscipit vel aliquam nihil quasi eveniet. Dolorum, provident earum!</p>
     <h3>1.2 Caráter excecional</h3>
@@ -20,7 +24,7 @@
     <h3>1.3 Perguntas de partida</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis ad minus autem quidem eius laboriosam excepturi illo exercitationem aliquid sed repellendus vel architecto enim, sit explicabo dolore, fuga totam?</p>
     
-    <h2>2. O Ordenamento do Teeritório em Portugal</h2>
+    <h2 class="sub-titulos">2. O Ordenamento do Teeritório em Portugal</h2>
     <h3>2.1 Os instrumentos de território</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nostrum unde alias incidunt ad non at beatae, illum ullam velit quaerat aliquid sunt eligendi harum accusamus impedit nulla, facere odio.</p>
     <h4>2.1.1 Os instrumentos de planejamento</h4>
@@ -29,7 +33,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda similique soluta, esse non earum consequatur aspernatur corporis laudantium neque ad accusantium reprehenderit recusandae autem expedita itaque! Fugit non consequatur consequuntur.</p>
     <hr>
 
-    <p>Repare que os títulos tem divisão tanto de <ins>tamanho</ins> quanto <ins>organização</ins>, </p>
+    <p>Repare que os títulos tem divisão tanto de <ins>tamanho</ins> quanto <ins>organização</ins>, a tag h1 ela se extende até a h6, sendo o último título a ser colocado. <strong style="text-transform: uppercase;">não existe h7</strong></p>
     <p>Assim se dá a hierarquia de títulos e paragráfos.</p>
 
     <img src="8371_Teemo.png" alt="Foto do Teemo">
