--- a/pag005.html
+++ b/pag005.html
@@ -6,6 +6,11 @@
     <title>Imagem Dinâmica</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background-image: linear-gradient(to bottom, #4EC0BA, #38EBE2, #5B9996);
+        }
+    </style>
 </head>
 <body>
     <h1>Vamos entender um pouco sobre imagens dinâmicas.</h1>
