--- a/pag006.html
+++ b/pag006.html
@@ -9,35 +9,35 @@
 </head>
 <body>
     
-    <h1>Aprendendo a colocar vídeo. <img src="icone-youtube.png" alt="ícone do youtube"></h1>
+    <h1 class="titulo-principal">Aprendendo a colocar vídeo. <img src="icone-youtube.png" alt="ícone do youtube"></h1>
 
-    <p>Para colocar vídeo é basicamente a mesma coisa do audio porém com a tag VIDEO. Ficar atento ao formato, tamanho do vídeo. Caso o vídeo seja minha grande pode alterar a largura WIDTH.</p>
+    <div class="caixas">
+        <h2 class="sub-titulos">Inserindo vídeos pelo VSCode</h2>
+        <p>Para colocar vídeo é basicamente a mesma coisa do audio porém com a tag VIDEO. Ficar atento ao formato, tamanho do vídeo. Caso o vídeo seja minha grande pode alterar a largura WIDTH.</p>
+        <video width="560" controls poster="midia/VENHA CONHECER NOSSOS SERVIÇOS DE AUTOMAÇÃO DE FARM.png">
+            <source src="midia/venda de akebi mp4.mp4" type="video/mp4">
+            <source src="midia/Venda De Akebi web.webm" type="video/webm">
+            <source src="midia/Venda De Akebi yt.mp4" type="video/mp4">
+        </video>
+        <p>Segue o código utilizado na segunda maneira.</p>
+        <pre>
+        <code>
+            video <abbr title="Para alterar o tamanho do vídeo.">width</abbr>="500" controls <abbr title="Para colocar capa no vídeo">poster</abbr>="midia/VENHA CONHECER NOSSOS SERVIÇOS DE AUTOMAÇÃO DE FARM.png"
+                source src="midia/venda de akebi mp4.mp4" type="video/mp4"
+                source src="midia/Venda De Akebi web.webm" type="video/webm"
+                source src="midia/Venda De Akebi yt.mp4" type="video/mp4"
+            video
+        </code>
+        </pre>
+    </div>
 
-    <video width="560" controls poster="midia/VENHA CONHECER NOSSOS SERVIÇOS DE AUTOMAÇÃO DE FARM.png">
-        <source src="midia/venda de akebi mp4.mp4" type="video/mp4">
-        <source src="midia/Venda De Akebi web.webm" type="video/webm">
-        <source src="midia/Venda De Akebi yt.mp4" type="video/mp4">
-    </video>
+<div class="caixas">
+    <h2 class="sub-titulos">Inserindo vídeos do youtube.</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/j-RpvIuazmc?si=QJ-p7MT526fOd-fL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>Eu fiz isso indo no vídeo do youtube e pegando na aba "Compartilhar" o "Incorporar".</p>
+    <img src="8371_Teemo.png" alt="Foto do teemo."> <br>
+    <mark style="background-color: chocolate;"><a href="index.html" rel="prev">Voltar</a></mark>
+</div>
 
-    <p>Segue o código utilizado na segunda maneira.</p>
-
-<pre>
-    <code>
-        video <abbr title="Para alterar o tamanho do vídeo.">width</abbr>="500" controls <abbr title="Para colocar capa no vídeo">poster</abbr>="midia/VENHA CONHECER NOSSOS SERVIÇOS DE AUTOMAÇÃO DE FARM.png"
-            source src="midia/venda de akebi mp4.mp4" type="video/mp4"
-            source src="midia/Venda De Akebi web.webm" type="video/webm"
-            source src="midia/Venda De Akebi yt.mp4" type="video/mp4"
-        video
-    </code>
-</pre>
-
-<h2>Inserindo vídeos do youtube.</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/j-RpvIuazmc?si=QJ-p7MT526fOd-fL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-<p>Eu fiz isso indo no vídeo do youtube e pegando na aba "Compartilhar" o "Incorporar".</p>
-
-<img src="8371_Teemo.png" alt="Foto do teemo."> <br>
-
-<mark style="background-color: chocolate;"><a href="index.html" rel="prev">Voltar</a></mark>
 </body>
 </html>
