--- a/pag004.html
+++ b/pag004.html
@@ -6,9 +6,16 @@
     <title>Como adicionar imagem</title>
     <link rel="shortcut icon" href="favicon_html.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background-image: linear-gradient(to bottom, #4EC0BA, #38EBE2, #5B9996);
+        }
+    </style>
 </head>
 <body>
-    <h1>Como adicionar imagem no seu site.</h1>
+    <div class="titulo-principal">
+        <h1>Como adicionar imagem no seu site.</h1>
+    </div>
     <p>Para adicionar imagens no seu site podemos usar a tag <strong>&lt;img&gt;</strong>, em seguida você irá indiciar qual foto irá querer que apareça na imagem e uma informação relativa caso a imagem não carregue. </p>
     <p>Existem vários tipos de imagem, JPEG e PNG.</p>
     <dl>
@@ -26,6 +33,7 @@
     <img src="logo-corpvs.png" alt="LOGO CORPVS SEGURANÇA"> <br>
     <img src="logo-coca-500.png" alt="LOGO DA COCA COLA"> <br>
     <img src="193d0559-15fd-4ba2-bf56-fa9e955080e3.png" alt="LOGO DA SAYO STORE"><br>
+    <p>Podemos também usar âncoras em imagem, que nós levam a novas abas.</p>
     <img src="8371_Teemo.png" alt=""><br>
     <mark style="background-color: chocolate;"><a href="index.html" rel="prev">Voltar</a></mark>
 </body>
